@@ -37,6 +37,7 @@ Maintenance
 * Possibility to use forthcoming DCMTK 3.6.1 in static builds (instead of 3.6.0)
 * Upgrade to Boost 1.60.0 for static builds
 * Use of HTTP status 403 Forbidden (instead of 401) if access to a REST resource is disallowed
+* Option "HttpsVerifyPeers" can be used to connect against self-signed HTTPS certificates
 
 
 Version 1.0.0 (2015/12/15)
